--- a/wp-content/themes/healthandcare/style.css
+++ b/wp-content/themes/healthandcare/style.css
@@ -8621,7 +8621,7 @@ h6 {
 .scheme_original h3 a,
 .scheme_original h4 a,
 .scheme_original h5 a {
-    color: #00b3b8 !important
+    color: #fff;
 }
 .scheme_dark_blue h1,
 .scheme_dark_blue h2,
@@ -15922,6 +15922,7 @@ button,
 .scheme_original .sc_button.sc_button_style_filled {
     background-color: transparent !important;
     border: 1px solid #fff !important;
+        color: #fff !important;
 }
 
 .scheme_original input[type="submit"],
