--- a/wp-content/themes/healthandcare/style.css
+++ b/wp-content/themes/healthandcare/style.css
@@ -19421,7 +19421,7 @@ button,
     color: #fff
 }
 .scheme_original .footer_banner .content_wrap .btn_banner a {
-    background-color: #10b8bc
+    background-color: #fff
 }
 .scheme_dark_blue .footer_banner .content_wrap .btn_banner a {
     background-color: #0484cf
