--- a/wp-content/themes/healthandcare/style.css
+++ b/wp-content/themes/healthandcare/style.css
@@ -17538,7 +17538,7 @@ button,
     background-color: #c6c8d9
 }
 .scheme_original .sc_services_item .sc_services_item_readmore {
-    color: #00b3b8 !important
+    color: #fff !important
 }
 .scheme_dark_blue .sc_services_item .sc_services_item_readmore {
     color: #00b3b8 !important
@@ -17550,7 +17550,10 @@ button,
     color: #00b3b8 !important
 }
 .scheme_original .sc_services_item .sc_services_item_readmore span {
-    color: #00b3b8 !important
+    color: #fff !important
+}
+h4.sc_services_item_title a {
+    color: #fff !important;
 }
 .scheme_dark_blue .sc_services_item .sc_services_item_readmore span {
     color: #3156a4
