cambios en hoja de estilos

--- a/wp-content/themes/healthandcare/style.css
+++ b/wp-content/themes/healthandcare/style.css
@@ -17644,7 +17644,7 @@ h4.sc_services_item_title a {
 .scheme_original .sc_services .sc_services_item.sc_services_item_5,
 .scheme_original .sc_services .sc_services_item.sc_services_item_9,
 .scheme_original .sc_services .sc_services_item.sc_services_item_13 {
-    background-color: #ffcd5f
+    background-color: #00ace8
 }
 .scheme_dark_blue .sc_services .sc_services_item.sc_services_item_1,
 .scheme_dark_blue .sc_services .sc_services_item.sc_services_item_5,
@@ -17692,7 +17692,7 @@ h4.sc_services_item_title a {
 .scheme_original .sc_services .sc_services_item.sc_services_item_7,
 .scheme_original .sc_services .sc_services_item.sc_services_item_11,
 .scheme_original .sc_services .sc_services_item.sc_services_item_15 {
-    background-color: #00b3b8 !important
+    background-color: #00946c !important
 }
 .scheme_dark_blue .sc_services .sc_services_item.sc_services_item_3,
 .scheme_dark_blue .sc_services .sc_services_item.sc_services_item_7,
@@ -17716,7 +17716,7 @@ h4.sc_services_item_title a {
 .scheme_original .sc_services .sc_services_item.sc_services_item_8,
 .scheme_original .sc_services .sc_services_item.sc_services_item_12,
 .scheme_original .sc_services .sc_services_item.sc_services_item_16 {
-    background-color: #8fcec5
+    background-color: #94c11e
 }
 .scheme_dark_blue .sc_services .sc_services_item.sc_services_item_4,
 .scheme_dark_blue .sc_services .sc_services_item.sc_services_item_8,
