cambios en el styles

--- a/wp-content/themes/healthandcare/style.css
+++ b/wp-content/themes/healthandcare/style.css
@@ -17644,7 +17644,7 @@ h4.sc_services_item_title a {
 .scheme_original .sc_services .sc_services_item.sc_services_item_5,
 .scheme_original .sc_services .sc_services_item.sc_services_item_9,
 .scheme_original .sc_services .sc_services_item.sc_services_item_13 {
-    background-color: #00ace8
+    background-color: #00ace8 !important
 }
 .scheme_dark_blue .sc_services .sc_services_item.sc_services_item_1,
 .scheme_dark_blue .sc_services .sc_services_item.sc_services_item_5,
@@ -17668,7 +17668,7 @@ h4.sc_services_item_title a {
 .scheme_original .sc_services .sc_services_item.sc_services_item_6,
 .scheme_original .sc_services .sc_services_item.sc_services_item_10,
 .scheme_original .sc_services .sc_services_item.sc_services_item_14 {
-    background-color: #10b8bc
+    background-color: #10b8bc !important
 }
 .scheme_dark_blue .sc_services .sc_services_item.sc_services_item_2,
 .scheme_dark_blue .sc_services .sc_services_item.sc_services_item_6,
@@ -17716,7 +17716,7 @@ h4.sc_services_item_title a {
 .scheme_original .sc_services .sc_services_item.sc_services_item_8,
 .scheme_original .sc_services .sc_services_item.sc_services_item_12,
 .scheme_original .sc_services .sc_services_item.sc_services_item_16 {
-    background-color: #94c11e
+    background-color: #94c11e !important
 }
 .scheme_dark_blue .sc_services .sc_services_item.sc_services_item_4,
 .scheme_dark_blue .sc_services .sc_services_item.sc_services_item_8,
