--- a/wp-content/themes/healthandcare/style.css
+++ b/wp-content/themes/healthandcare/style.css
@@ -749,15 +749,15 @@ label.required:after {
     /* float: left;*/
     /* New way: inline blocks */
     /* Warning: remove spaces between columns tags:
-		Right:															Wrong:
-		<div class="columns_wrap"><div class="column-1_2">				<div class="columns_wrap">
-																			<div class="column-1_2">
-			...																	...
-  		</div><div class="column-1_2">										</div
-																			<div class="column-1_2">
-			...																	...
-		</div></div>														</div>
-																		</div>
+        Right:                                                          Wrong:
+        <div class="columns_wrap"><div class="column-1_2">              <div class="columns_wrap">
+                                                                            <div class="column-1_2">
+            ...                                                                 ...
+        </div><div class="column-1_2">                                      </div
+                                                                            <div class="column-1_2">
+            ...                                                                 ...
+        </div></div>                                                        </div>
+                                                                        </div>
   */
     
     display: inline-block;
@@ -4533,10 +4533,10 @@ blockquote cite {
     overflow: hidden;
 }
 .contacts_wrap .contacts_address .address_left {
-    float: left;
+    float: none;
 }
 .contacts_wrap .contacts_address .address_right {
-    float: right;
+    float: none;
 }
 /* Testimonials and Twitter area */
 
@@ -7866,7 +7866,7 @@ footer .contacts_address .address_left {
     line-height: 1.3;
 }
 footer .contacts_address .address_left > div {
-    display: inline-block;
+    display: block;
     vertical-align: top;
     padding-left: 3.69230rem;
     position: relative;
@@ -7880,9 +7880,9 @@ footer .contacts_address .address_left .address2_contact_info:before {
     content: "\E8FE";
     font-family: 'fontello';
     position: absolute;
-    left: 0;
-    top: 0.61538rem;
-    font-size: 2.308rem;
+    left: 5%;
+    top: -8px;
+    font-size: 50px;
     font-weight: normal;
 }
 footer .contacts_address .address_left .email_contact_info {
@@ -7892,16 +7892,16 @@ footer .contacts_address .address_left .email_contact_info:before {
     content: "\E8EF";
     font-family: 'fontello';
     position: absolute;
-    font-size: 2.308rem;
-    left: 0;
-    top: 0.461rem;
+    font-size: 50px;
+    left: 27px;
+    top: -20px;
     font-weight: normal;
 }
 footer .contacts_address .address_right {
     margin: 0;
 }
 footer .contacts_address .address_right .btn_directions {
-    margin: 2em 0;
+    margin:0;
 }
 footer .contacts_address .address_right .btn_directions a {
     font-size: 1.077rem;
@@ -7925,10 +7925,10 @@ footer .contacts_address .address_right .btn_directions a:hover:after {
 footer .contacts_address .address_right .btn_directions a:before {
     content: "\E833";
     font-family: 'fontello';
-    font-size: 1.38461rem;
+    font-size: 50px;
     position: absolute;
-    top: 1.69230rem;
-    left: 1.84615rem;
+    top: 34px;
+    left: 58px;
     padding: 0 0.07692rem;
     font-weight: 100;
 }
@@ -7942,7 +7942,7 @@ footer .contacts_address .address_right .btn_directions a:after {
     margin-left: 0.692em;
     padding: 0.3em 0.3em 0em 0.3em;
     position: absolute;
-    top: 1.46153rem;
+    top: 34px;
     right: 1.23076rem;
     font-weight: 100;
     -webkit-transition: all 0.3s ease-in-out;
@@ -8676,7 +8676,7 @@ h6 {
     color: #d56c9c
 }
 .scheme_original a {
-    color: #00b3b8 !important
+    color: #00b3b8
 }
 .scheme_dark_blue a {
     color: #3156a4
@@ -15932,6 +15932,11 @@ button,
 .scheme_original .sc_button.sc_button_style_filled {
     color: #fff
 }
+.seccion1 .wpb_column.vc_column_container.vc_col-sm-12 .sc_content.content_wrap.home1_wide_block1.animated.fadeInUp.normal a {
+    color: #22bdc1 !important;
+    border: 1px solid #22bdc1 !important;
+    padding: 20px 50px !important;
+}
 .scheme_dark_blue input[type="submit"],
 .scheme_dark_blue input[type="reset"],
 .scheme_dark_blue input[type="button"],
@@ -18615,7 +18620,7 @@ h4.sc_services_item_title a {
     color: #00b3b8 !important
 }
 .scheme_original .sc_team_item .sc_team_item_info .sc_team_item_title a {
-    color: #00b3b8 !important
+    color:#474761 !important
 }
 .scheme_dark_blue .sc_team_item .sc_team_item_info .sc_team_item_title a {
     color: #00b3b8 !important
@@ -19450,7 +19455,7 @@ h4.sc_services_item_title a {
     background-color: #d56c9c
 }
 .scheme_original .footer_banner .content_wrap .btn_banner a {
-    color: #fff
+    color: #10b8bc !important
 }
 .scheme_dark_blue .footer_banner .content_wrap .btn_banner a {
     color: #fff
@@ -19474,7 +19479,7 @@ h4.sc_services_item_title a {
     background-color: #69c8f8
 }
 .scheme_original footer .contacts_address {
-    background-color: #00b3b8 !important
+    background-color: #01a29c !important
 }
 .scheme_dark_blue footer .contacts_address {
     background-color: #3156a4
@@ -20127,4 +20132,43 @@ h4.sc_services_item_title a {
 }
 .menu_user_nav > li > ul ul.submenu_left {
     left: -12em -1px
+}
+.home .seccion1 a {
+    color: #00b3b8 !important;
+    border: 1px solid #00b3b8 !important;
+    text-align: center !important;
+}
+h1.sc_title.sc_title_iconed, h1.sc_title.sc_title_regular.sc_align_center, .sc_section_content h1.sc_title.sc_title_regular.sc_align_center {
+    color: #9d9d9b!important;
+}
+.sc_section_content h6 {
+    color: #00b3b8 !important;
+}
+
+.copyright_wrap.copyright_style_plain.scheme_original {
+    width: 100% !important;
+    float: left;
+}
+.sc_googlemap.inited {
+    width: 50% !important;
+    float: left;    
+    height: 553px !important;
+}
+footer.contacts_wrap.scheme_original {
+    width: 50%;
+    float: right;
+}
+.address2_contact_info, footer .contacts_address .address_left .email_contact_info {
+    padding: 0 5% 0 100px !important;
+    margin: 5% 9%;
+    border-bottom: 1px solid #fff !important;
+    width: 57% !important;
+    border-right: 0 !important;
+    height: 100px;
+}
+
+.scheme_original footer .contacts_address .address_right .btn_directions a {
+    background-color: rgba(239,239,239,0.1);
+    padding: 7% 112px;
+    font-size: 22px !important;
 }
